# real-time-impl

./: .gitignore  README.md
client/: .gitignore  index.html  main.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.svelte
client/src/lib/: LongPolling.svelte  ServerSentEvents.svelte  WebSocket.svelte
server/: .gitignore  justfile  main.py  pyproject.toml
server/api/: long-polling.http  server-sent-events.http
server/src/: config.py  long_polling.py  main.py  session.py  sse.py  ws.py
