[project]
name = "real-time-server"
version = "0.1.0"
description = "Server with several real-time communication implementations"
requires-python = ">=3.12"
dependencies = [
  "itsdangerous>=2.2.0",
  "python-decouple>=3.8",
  "starlette>=0.41.3",
  "uvicorn[standard]>=0.32.1",
]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "ARG001",
  "ARG002",
  "COM812",
  "D1",
  "D203",
  "D213",
  "E741",
  "EM101",
  "INP",
  "ISC001",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
